# CocosStudio

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  install-deps-linux.sh  setupWin32.bat  wxwidgetsCompilation.sh
Resources/CocosResources/: arrow.blend
cmake/Modules/: CocosUsePrebuiltLibs.cmake  SetPrecompiledHeaders.cmake
source/: CMakeLists.txt
source/editor/: AbstractCocosGLCanvasController.h  CMakeLists.txt  CocosGLCanvas.cpp  CocosGLCanvas.h  CocosGLCanvas2DController.cpp  CocosGLCanvas2DController.h  CocosGLCanvas3DController.cpp  CocosGLCanvas3DController.h  CocosGLCanvasController.h  Componets3DPanel.cpp  Componets3DPanel.fbp  Componets3DPanel.h  CustomDockArt.cpp  CustomDockArt.h  CustomTabArt.cpp  CustomTabArt.h  EditorGrid.cpp  EditorScene3D.cpp  EditorScene3D.h  MainFrame.cpp  MainFrame.fbp  MainFrame.h  MainFrameWrapper.cpp  main.cpp  stdafx.h
source/libEditorModel/: ModelNode.h
src/: CMakeLists.txt  CocosGLCanvas.cpp  CocosGLCanvas.h  CocosGLContext.cpp  CocosGLContext.h  DrawNode3D.cpp  DrawNode3D.h  EditorGrid.cpp  EditorGrid.h  EditorScene.cpp  EditorScene.h  EditorScene3D.cpp  EditorScene3D.h  GridCustomCommand.cpp  GridCustomCommand.h  MainFrame.cpp  MainFrame.fbp  MainFrame.h  MainFrameWrapper.cpp  MainFrameWrapper.h  MyApp.h  main.cpp  noname.cpp  noname.h  stdafx.cpp  stdafx.h
src/Editor/: CMakeLists.txt  CocosGLCanvas.cpp  DrawNode3D.cpp  DrawNode3D.h  EditorGrid.cpp  EditorGrid.h  EditorScene3D.cpp  EditorScene3D.h  GridCustomCommand.cpp  GridCustomCommand.h  MainFrame.cpp  MainFrame.fbp  MainFrame.h  MainFrameWrapper.cpp  MyApp.h  main.cpp  stdafx.cpp  stdafx.h
src/LibEditorModel/: CMakeLists.txt  DLLDefines.h  ModelNode.cpp  ModelNode.h
